// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`failed 1`] = `
.c10 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: #FF6257;
  color: #000000;
}

.c10 a {
  color: #FFFFFF;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 16px;
  min-height: 32px;
}

.c7 {
  box-sizing: border-box;
}

.c13 {
  box-sizing: border-box;
  padding: 8px;
  height: 100px;
  border-radius: 4px;
}

.c14 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: #9F85FF;
  color: #000000;
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
  margin-right: 16px;
}

.c14:focus-visible,
.teleport-button__force-focus-visible .c14 {
  background-color: #9F85FF;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #9F85FF;
}

.c14:hover,
.teleport-button__force-hover .c14 {
  background-color: #B29DFF;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.20),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12);
}

.c14:active,
.teleport-button__force-active .c14 {
  background-color: #C5B6FF;
  border-color: transparent;
  color: #000000;
}

.c14:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c15 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.72);
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
}

.c15:focus-visible,
.teleport-button__force-focus-visible .c15 {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.72);
  border-color: rgba(255, 255, 255, 0.72);
  border-radius: 4px;
  outline: none;
}

.c15:hover,
.teleport-button__force-hover .c15 {
  background-color: rgba(255,255,255,0.13);
  border-color: transparent;
  color: #FFFFFF;
  box-shadow: none;
}

.c15:active,
.teleport-button__force-active .c15 {
  background-color: rgba(255,255,255,0.18);
  border-color: transparent;
  color: #FFFFFF;
}

.c15:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c12 {
  color: #FFFFFF;
  display: block;
  font-size: 12px;
  width: 100%;
  margin-bottom: 4px;
  margin-bottom: 4px;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 500;
  font-size: 18px;
  line-height: 24px;
}

.c11 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  margin-bottom: 24px;
}

.c5 {
  display: flex;
  align-items: center;
}

.c8 {
  display: flex;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0, 0, 0, 0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #222C59;
  color: #FFFFFF;
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  max-width: 500px;
  width: 100%;
}

.c9 {
  margin-bottom: 32px;
  flex: 1;
  flex-direction: column;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4 c5"
      >
        <h2
          class="c6"
        >
          Request Access
        </h2>
      </div>
      <div
        class="c7 c8 c9"
      >
        <div
          class="c10"
          kind="danger"
        >
          some error message
        </div>
        <div
          class="c11"
        >
          To access your Teleport account, please send an authorization request using the form below.
        </div>
        <label
          class="c12"
        >
          Authorization Request Message
        </label>
        <textarea
          class="c13"
          height="100px"
          placeholder="Describe your request..."
          style="outline: none;"
        >
          some reason
        </textarea>
      </div>
      <div
        class="c7"
      >
        <button
          class="c14"
          fill="filled"
        >
          Send Request
        </button>
        <button
          class="c15"
          fill="filled"
        >
          Cancel & Logout
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`loaded with custom prompt 1`] = `
.c4 {
  box-sizing: border-box;
  margin-bottom: 16px;
  min-height: 32px;
}

.c7 {
  box-sizing: border-box;
}

.c12 {
  box-sizing: border-box;
  padding: 8px;
  height: 100px;
  border-radius: 4px;
}

.c13 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: #9F85FF;
  color: #000000;
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
  margin-right: 16px;
}

.c13:focus-visible,
.teleport-button__force-focus-visible .c13 {
  background-color: #9F85FF;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #9F85FF;
}

.c13:hover,
.teleport-button__force-hover .c13 {
  background-color: #B29DFF;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.20),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12);
}

.c13:active,
.teleport-button__force-active .c13 {
  background-color: #C5B6FF;
  border-color: transparent;
  color: #000000;
}

.c13:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c14 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.72);
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
}

.c14:focus-visible,
.teleport-button__force-focus-visible .c14 {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.72);
  border-color: rgba(255, 255, 255, 0.72);
  border-radius: 4px;
  outline: none;
}

.c14:hover,
.teleport-button__force-hover .c14 {
  background-color: rgba(255,255,255,0.13);
  border-color: transparent;
  color: #FFFFFF;
  box-shadow: none;
}

.c14:active,
.teleport-button__force-active .c14 {
  background-color: rgba(255,255,255,0.18);
  border-color: transparent;
  color: #FFFFFF;
}

.c14:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c11 {
  color: #FFFFFF;
  display: block;
  font-size: 12px;
  width: 100%;
  margin-bottom: 4px;
  margin-bottom: 4px;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 500;
  font-size: 18px;
  line-height: 24px;
}

.c10 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  margin-bottom: 24px;
}

.c5 {
  display: flex;
  align-items: center;
}

.c8 {
  display: flex;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0, 0, 0, 0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #222C59;
  color: #FFFFFF;
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  max-width: 500px;
  width: 100%;
}

.c9 {
  margin-bottom: 32px;
  flex: 1;
  flex-direction: column;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4 c5"
      >
        <h2
          class="c6"
        >
          Request Access
        </h2>
      </div>
      <div
        class="c7 c8 c9"
      >
        <div
          class="c10"
        >
          Some custom prompt set by administrator
        </div>
        <label
          class="c11"
        >
          Authorization Request Message
        </label>
        <textarea
          class="c12"
          height="100px"
          placeholder="Describe your request..."
          style="outline: none;"
        >
          some reason
        </textarea>
      </div>
      <div
        class="c7"
      >
        <button
          class="c13"
          fill="filled"
        >
          Send Request
        </button>
        <button
          class="c14"
          fill="filled"
        >
          Cancel & Logout
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`loaded without custom prompt 1`] = `
.c4 {
  box-sizing: border-box;
  margin-bottom: 16px;
  min-height: 32px;
}

.c7 {
  box-sizing: border-box;
}

.c12 {
  box-sizing: border-box;
  padding: 8px;
  height: 100px;
  border-radius: 4px;
}

.c13 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: #9F85FF;
  color: #000000;
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
  margin-right: 16px;
}

.c13:focus-visible,
.teleport-button__force-focus-visible .c13 {
  background-color: #9F85FF;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #9F85FF;
}

.c13:hover,
.teleport-button__force-hover .c13 {
  background-color: #B29DFF;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.20),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12);
}

.c13:active,
.teleport-button__force-active .c13 {
  background-color: #C5B6FF;
  border-color: transparent;
  color: #000000;
}

.c13:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c14 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.72);
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
}

.c14:focus-visible,
.teleport-button__force-focus-visible .c14 {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.72);
  border-color: rgba(255, 255, 255, 0.72);
  border-radius: 4px;
  outline: none;
}

.c14:hover,
.teleport-button__force-hover .c14 {
  background-color: rgba(255,255,255,0.13);
  border-color: transparent;
  color: #FFFFFF;
  box-shadow: none;
}

.c14:active,
.teleport-button__force-active .c14 {
  background-color: rgba(255,255,255,0.18);
  border-color: transparent;
  color: #FFFFFF;
}

.c14:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c11 {
  color: #FFFFFF;
  display: block;
  font-size: 12px;
  width: 100%;
  margin-bottom: 4px;
  margin-bottom: 4px;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 500;
  font-size: 18px;
  line-height: 24px;
}

.c10 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  margin-bottom: 24px;
}

.c5 {
  display: flex;
  align-items: center;
}

.c8 {
  display: flex;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0, 0, 0, 0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #222C59;
  color: #FFFFFF;
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  max-width: 500px;
  width: 100%;
}

.c9 {
  margin-bottom: 32px;
  flex: 1;
  flex-direction: column;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4 c5"
      >
        <h2
          class="c6"
        >
          Request Access
        </h2>
      </div>
      <div
        class="c7 c8 c9"
      >
        <div
          class="c10"
        >
          To access your Teleport account, please send an authorization request using the form below.
        </div>
        <label
          class="c11"
        >
          Authorization Request Message
        </label>
        <textarea
          class="c12"
          height="100px"
          placeholder="Describe your request..."
          style="outline: none;"
        >
          some reason
        </textarea>
      </div>
      <div
        class="c7"
      >
        <button
          class="c13"
          fill="filled"
        >
          Send Request
        </button>
        <button
          class="c14"
          fill="filled"
        >
          Cancel & Logout
        </button>
      </div>
    </div>
  </div>
</div>
`;
